--- a/index.html
+++ b/index.html
@@ -52,11 +52,14 @@
 	
 <section id="home-section" class="hero">
     <div class="home-slider owl-carousel">
+        <div class="slider-item">
+            <div class="overlay"></div>
             <div class="container">
                 <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end"
                     data-scrollax-parent="true">
                     <div class="one-third js-fullheight order-md-last img"
                         style="background-image:url(images/charles2.png);">
+                        <div class="overlay"></div>
                     </div>
                     <div class="one-forth d-flex align-items-center ftco-animate"
                         data-scrollax=" properties: { translateY: '70%' }">
@@ -70,16 +73,19 @@
                                     works</a>
                             </p>
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
 
         <div class="slider-item">
+            <div class="overlay"></div>
             <div class="container">
                 <div class="row d-flex no-gutters slider-text align-items-end justify-content-end"
                     data-scrollax-parent="true">
                     <div class="one-third js-fullheight order-md-last img"
                         style="background-image:url(images/charles.png);">
+                        <div class="overlay"></div>
                     </div>
                     <div class="one-forth d-flex align-items-center ftco-animate"
                         data-scrollax=" properties: { translateY: '70%' }">
