--- a/index.html
+++ b/index.html
@@ -112,6 +112,18 @@
 						<div class="overlay"></div>
 						<div class="img d-flex align-self-stretch align-items-center"
 							style="background-image:url(images/charles2.png);">
+							<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
+							<li class="ftco-animate"><a
+									href="https://www.linkedin.com/in/charles-iqbal-rizanta-380b1724b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><span
+										class="icon-linkedin"></span></a></li>
+							<li class="ftco-animate"><a href="https://api.whatsapp.com/send?phone=6282139077587"><span
+										class="icon-whatsapp"></span></a></li>
+							<li class="ftco-animate"><a
+									href="https://www.instagram.com/charlessiqball_/?utm_source=qr&r=nametag"><span
+										class="icon-instagram"></span></a></li>
+							<li class="ftco-animate"><a href="https://github.com/charlesiqbalr?tab=repositories"><span
+										class="icon-github"></span></a></li>
+						</ul>
 						</div>
 					</div>
 				</div>
@@ -150,8 +162,8 @@
 		<div class="container">
 			<div class="row justify-content-center pb-5">
 				<div class="col-md-10 heading-section text-center ftco-animate">
-					<h1 class="big big-2">Resume</h1>
-					<h2 class="mb-4">Resume</h2>
+					<h1 class="big big-2">Certificate</h1>
+					<h2 class="mb-4">Certificate</h2>
 					<p>The following are some of my areas of expertise, and I want to always develop them to increase my
 						abilities.</p>
 				</div>
