--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 					<h1 class="big big-2">Certificate</h1>
 					<h2 class="mb-4">Certificate</h2>
 					<p>The following are some of my areas of expertise, and I want to always develop them to increase my
-						abilities.</p>
+						abilities</p>
 				</div>
 			</div>
 			<div class="row">
