--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 						<div class="overlay"></div>
 						<div class="img d-flex align-self-stretch align-items-center"
 							style="background-image:url(images/charles2.png);">
+							<section>
 							<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
 							<li class="ftco-animate"><a
 									href="https://www.linkedin.com/in/charles-iqbal-rizanta-380b1724b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><span
@@ -124,6 +125,7 @@
 							<li class="ftco-animate"><a href="https://github.com/charlesiqbalr?tab=repositories"><span
 										class="icon-github"></span></a></li>
 						</ul>
+								</section>
 						</div>
 					</div>
 				</div>
