--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
 						<div class="overlay"></div>
 						<div class="img d-flex align-self-stretch align-items-center"
 							style="background-image:url(images/charles2.png);">
-							<section>
+							<div class="row justify-content-start pb-3">
+						<div class="col-md-12 heading-section ftco-animate">
 							<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
 							<li class="ftco-animate"><a
 									href="https://www.linkedin.com/in/charles-iqbal-rizanta-380b1724b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><span
@@ -125,7 +126,8 @@
 							<li class="ftco-animate"><a href="https://github.com/charlesiqbalr?tab=repositories"><span
 										class="icon-github"></span></a></li>
 						</ul>
-								</section>
+						</div>
+							</div>
 						</div>
 					</div>
 				</div>
