baru index.html

--- a/index.html
+++ b/index.html
@@ -105,46 +105,74 @@
 
 
 	<section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
-		<div class="container">
-			<div class="row d-flex">
-				<div class="col-md-6 col-lg-5 d-flex">
-					<div class="img-about img d-flex align-items-stretch">
-						<div class="overlay"></div>
-						<div class="img d-flex align-self-stretch align-items-center"
-							style="background-image:url(images/charles2.png);">
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
-					<div class="row justify-content-start pb-3">
-						<div class="col-md-12 heading-section ftco-animate">
-							<h1 class="big">About</h1>
-							<h2 class="mb-4">About Me</h2>
-							<p>Know a little about me</p>
-							<ul class="about-info mt-4 px-md-0 px-2">
-								<li class="d-flex"><span>Name:</span> <span>Charles Iqbal Rizanta</span></li>
-								<!-- <li class="d-flex"><span>Date of birth:</span> <span>October 12, 2003</span></li> -->
-								<li class="d-flex"><span>Address:</span> <span>Malang, Jawa Timur, Indonesia</span></li>
-								<li class="d-flex"><span>Zip code:</span> <span>65119</span></li>
-								<li class="d-flex"><span>Email:</span> <span>charlesiqbalr@gmail.com</span></li>
-								<li class="d-flex"><span>Phone: </span> <span>082139077587</span></li>
-							</ul>
-						</div>
-					</div>
-					<div class="counter-wrap ftco-animate d-flex mt-md-3">
-						<div class="text">
-							<p class="mb-4">
-								<span class="number" data-number="120">0</span>
-								<span>Project complete</span>
-							</p>
-							<p><a href="https://drive.google.com/file/d/1M0vx4ipqs_2JVPcRfjrotGKrdrq9AqTn/view?usp=sharing"
-									class="btn btn-primary py-3 px-3">Download CV</a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+    <div class="container">
+        <div class="row d-flex">
+            <div class="col-md-6 col-lg-5 d-flex">
+                <div class="img-about img d-flex align-items-stretch">
+                    <div class="overlay"></div>
+                    <div class="img d-flex align-self-stretch align-items-center" 
+                        style="background-image:url(images/charles2.png);">
+                    </div>
+                    <!-- Tambahkan div untuk logo sosial media -->
+                    <div class="social-icons d-flex justify-content-center">
+                        <ul class="ftco-footer-social list-unstyled">
+                            <li class="ftco-animate">
+                                <a href="https://www.linkedin.com/in/charles-iqbal-rizanta-ab0814327/">
+                                    <span class="icon-linkedin"></span>
+                                </a>
+                            </li>
+                            <li class="ftco-animate">
+                                <a href="https://api.whatsapp.com/send?phone=6282139077587">
+                                    <span class="icon-whatsapp"></span>
+                                </a>
+                            </li>
+                            <li class="ftco-animate">
+                                <a href="https://www.instagram.com/charlesiqball/">
+                                    <span class="icon-instagram"></span>
+                                </a>
+                            </li>
+                            <li class="ftco-animate">
+                                <a href="https://github.com/charlesiqbalr">
+                                    <span class="icon-github"></span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
+                <div class="row justify-content-start pb-3">
+                    <div class="col-md-12 heading-section ftco-animate">
+                        <h1 class="big">About</h1>
+                        <h2 class="mb-4">About Me</h2>
+                        <p>Know a little about me</p>
+                        <ul class="about-info mt-4 px-md-0 px-2">
+                            <li class="d-flex"><span>Name:</span> <span>Charles Iqbal Rizanta</span></li>
+                            <!-- <li class="d-flex"><span>Date of birth:</span> <span>October 12, 2003</span></li> -->
+                            <li class="d-flex"><span>Address:</span> <span>Malang, Jawa Timur, Indonesia</span></li>
+                            <li class="d-flex"><span>Zip code:</span> <span>65119</span></li>
+                            <li class="d-flex"><span>Email:</span> <span>charlesiqbalr@gmail.com</span></li>
+                            <li class="d-flex"><span>Phone: </span> <span>082139077587</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="counter-wrap ftco-animate d-flex mt-md-3">
+                    <div class="text">
+                        <p class="mb-4">
+                            <span class="number" data-number="120">0</span>
+                            <span>Project complete</span>
+                        </p>
+                        <p>
+                            <a href="https://drive.google.com/file/d/1M0vx4ipqs_2JVPcRfjrotGKrdrq9AqTn/view?usp=sharing" 
+                                class="btn btn-primary py-3 px-3">Download CV</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 	<section class="ftco-section ftco-no-pb" id="resume-section">
 		<div class="container">
@@ -578,15 +606,12 @@
 							seriously. You met the right person to entrust your work to.</p>
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
 							<li class="ftco-animate"><a
-									href="https://www.linkedin.com/in/charles-iqbal-rizanta-380b1724b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><span
-										class="icon-linkedin"></span></a></li>
+									href="https://www.linkedin.com/in/charles-iqbal-rizanta-ab0814327/"></span></a></li>
 							<li class="ftco-animate"><a href="https://api.whatsapp.com/send?phone=6282139077587"><span
 										class="icon-whatsapp"></span></a></li>
 							<li class="ftco-animate"><a
-									href="https://www.instagram.com/charlessiqball_/?utm_source=qr&r=nametag"><span
-										class="icon-instagram"></span></a></li>
-							<li class="ftco-animate"><a href="https://github.com/charlesiqbalr?tab=repositories"><span
-										class="icon-github"></span></a></li>
+									href="https://www.instagram.com/charlesiqball/"></span></a></li>
+							<li class="ftco-animate"><a href="https://github.com/charlesiqbalr"></span></a></li>
 						</ul>
 					</div>
 				</div>
