--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
 
-
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 		<div class="container">
 			<a class="navbar-brand" href="index.html">CHARLES</a>
@@ -49,105 +48,99 @@
 			</div>
 		</div>
 	</nav>
-	
-<section id="home-section" class="hero">
-    <div class="home-slider owl-carousel">
-        <div class="slider-item">
-            <div class="overlay"></div>
-            <div class="container">
-                <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end"
-                    data-scrollax-parent="true">
-                    <div class="one-third js-fullheight order-md-last img"
-                        style="background-image:url(images/charles2.png);">
-                        <div class="overlay"></div>
-                    </div>
-                    <div class="one-forth d-flex align-items-center ftco-animate"
-                        data-scrollax=" properties: { translateY: '70%' }">
-                        <div class="text">
-                            <span class="subheading">Hello!</span>
-                            <h1 class="mb-4 mt-3">I'm <span>Charles Iqbal Rizanta</span></h1>
-                            <h2 class="mb-4">A Freelance Web Developer</h2>
-                            <p><a href="https://api.whatsapp.com/send?phone=6282139077587"
-                                    class="btn btn-primary py-3 px-4">Hire me</a>
-                                <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My
-                                    works</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+	<section id="home-section" class="hero">
+		<div class="home-slider owl-carousel">
+			<div class="slider-item">
+				<div class="container">
+					<div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end"
+						data-scrollax-parent="true">
+						<div class="one-third js-fullheight order-md-last img"
+							style="background-image:url(images/charles2.png);">
 
-        <div class="slider-item">
-            <div class="overlay"></div>
-            <div class="container">
-                <div class="row d-flex no-gutters slider-text align-items-end justify-content-end"
-                    data-scrollax-parent="true">
-                    <div class="one-third js-fullheight order-md-last img"
-                        style="background-image:url(images/charles.png);">
-                        <div class="overlay"></div>
-                    </div>
-                    <div class="one-forth d-flex align-items-center ftco-animate"
-                        data-scrollax=" properties: { translateY: '70%' }">
-                        <div class="text">
-                            <span class="subheading">Hello!</span>
-                            <h1 class="mb-4 mt-3">I'm a <span>web developer</span> based in Indonesia</h1>
-                            <p><a href="https://api.whatsapp.com/send?phone=6282139077587"
-                                    class="btn btn-primary py-3 px-4">Hire me</a> <a href="#projects-section"
-                                    class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+						</div>
+						<div class="one-forth d-flex align-items-center ftco-animate"
+							data-scrollax=" properties: { translateY: '70%' }">
+							<div class="text">
+								<span class="subheading">Hello!</span>
+								<h1 class="mb-4 mt-3">I'm <span>Charles Iqbal Rizanta</span></h1>
+								<h2 class="mb-4">A Freelance Web Developer</h2>
+								<p><a href="https://api.whatsapp.com/send?phone=6282139077587"
+										class="btn btn-primary py-3 px-4">Hire me</a>
+									<a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My
+										works</a>
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="slider-item">
+				<div class="container">
+					<div class="row d-flex no-gutters slider-text align-items-end justify-content-end"
+						data-scrollax-parent="true">
+						<div class="one-third js-fullheight order-md-last img"
+							style="background-image:url(images/charles.png);">
+
+						</div>
+						<div class="one-forth d-flex align-items-center ftco-animate"
+							data-scrollax=" properties: { translateY: '70%' }">
+							<div class="text">
+								<span class="subheading">Hello!</span>
+								<h1 class="mb-4 mt-3">I'm a <span>web developer</span> based in Indonesia</h1>
+								<p><a href="https://api.whatsapp.com/send?phone=6282139077587"
+										class="btn btn-primary py-3 px-4">Hire me</a> <a href="#projects-section"
+										class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
 
 	<section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
-    <div class="container">
-        <div class="row d-flex">
-            <div class="col-md-6 col-lg-5 d-flex">
-                <div class="img-about img d-flex align-items-stretch">
-                    <div class="overlay"></div>
-                    <div class="img d-flex align-self-stretch align-items-center" 
-                        style="background-image:url(images/charles2.png);">
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
-                <div class="row justify-content-start pb-3">
-                    <div class="col-md-12 heading-section ftco-animate">
-                        <h1 class="big">About</h1>
-                        <h2 class="mb-4">About Me</h2>
-                        <p>Know a little about me</p>
-                        <ul class="about-info mt-4 px-md-0 px-2">
-                            <li class="d-flex"><span>Name:</span> <span>Charles Iqbal Rizanta</span></li>
-                            <!-- <li class="d-flex"><span>Date of birth:</span> <span>October 12, 2003</span></li> -->
-                            <li class="d-flex"><span>Address:</span> <span>Malang, Jawa Timur, Indonesia</span></li>
-                            <li class="d-flex"><span>Zip code:</span> <span>65119</span></li>
-                            <li class="d-flex"><span>Email:</span> <span>charlesiqbalr@gmail.com</span></li>
-                            <li class="d-flex"><span>Phone: </span> <span>082139077587</span></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="counter-wrap ftco-animate d-flex mt-md-3">
-                    <div class="text">
-                        <p class="mb-4">
-                            <span class="number" data-number="120">0</span>
-                            <span>Project complete</span>
-                        </p>
-                        <p>
-                            <a href="https://drive.google.com/file/d/1M0vx4ipqs_2JVPcRfjrotGKrdrq9AqTn/view?usp=sharing" 
-                                class="btn btn-primary py-3 px-3">Download CV</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
+		<div class="container">
+			<div class="row d-flex">
+				<div class="col-md-6 col-lg-5 d-flex">
+					<div class="img-about img d-flex align-items-stretch">
+						<div class="overlay"></div>
+						<div class="img d-flex align-self-stretch align-items-center"
+							style="background-image:url(images/charles2.png);">
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
+					<div class="row justify-content-start pb-3">
+						<div class="col-md-12 heading-section ftco-animate">
+							<h1 class="big">About</h1>
+							<h2 class="mb-4">About Me</h2>
+							<p>Know a little about me</p>
+							<ul class="about-info mt-4 px-md-0 px-2">
+								<li class="d-flex"><span>Name:</span> <span>Charles Iqbal Rizanta</span></li>
+								<!-- <li class="d-flex"><span>Date of birth:</span> <span>October 12, 2003</span></li> -->
+								<li class="d-flex"><span>Address:</span> <span>Malang, Jawa Timur, Indonesia</span></li>
+								<li class="d-flex"><span>Zip code:</span> <span>65119</span></li>
+								<li class="d-flex"><span>Email:</span> <span>charlesiqbalr@gmail.com</span></li>
+								<li class="d-flex"><span>Phone: </span> <span>082139077587</span></li>
+							</ul>
+						</div>
+					</div>
+					<div class="counter-wrap ftco-animate d-flex mt-md-3">
+						<div class="text">
+							<p class="mb-4">
+								<span class="number" data-number="120">0</span>
+								<span>Project complete</span>
+							</p>
+							<p><a href="https://drive.google.com/file/d/1M0vx4ipqs_2JVPcRfjrotGKrdrq9AqTn/view?usp=sharing"
+									class="btn btn-primary py-3 px-3">Download CV</a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
 	<section class="ftco-section ftco-no-pb" id="resume-section">
 		<div class="container">
@@ -156,7 +149,7 @@
 					<h1 class="big big-2">Certificate</h1>
 					<h2 class="mb-4">Certificate</h2>
 					<p>The following are some of my areas of expertise, and I want to always develop them to increase my
-						abilities</p>
+						abilities.</p>
 				</div>
 			</div>
 			<div class="row">
@@ -222,6 +215,66 @@
     					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
     				</div> -->
 				</div>
+
+				<div class="col-md-6">
+					<div class="resume-wrap ftco-animate">
+						<span class="date">2023-2024</span>
+						<h2>Core of Partnership and Affiliation GDSC UIN
+							Malang</h2>
+						<span class="position">State Islamic University of Malang</span>
+						<p class="mt-4">"Member of GDSC UIN Malang" is a student involved in the Google Developer
+							Student Clubs at UIN Malang. They participate in club activities, forge partnerships, and
+							contribute to skill development and tech community growth on campus and beyond.</p>
+						<div class="row justify-content-center mt-3">
+							<div class="col-md-6 text-center ftco-animate">
+								<p><a href="https://drive.google.com/file/d/11w97VHjIEIJH6y2c2icELByD3iZ4AAvE/view?usp=sharing"
+										class="btn btn-primary py-3 px-4">Certificate</a></p>
+							</div>
+						</div>
+					</div>
+					<!-- <div class="resume-wrap ftco-animate">
+    					<span class="date">2014-2015</span>
+    					<h2>Wordpress Developer</h2>
+    					<span class="position">Cambridge University</span>
+    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    				</div>
+    				<div class="resume-wrap ftco-animate">
+    					<span class="date">2017-2018</span>
+    					<h2>UI/UX Designer</h2>
+    					<span class="position">Cambridge University</span>
+    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    				</div> -->
+				</div>
+
+				<div class="col-md-6">
+					<div class="resume-wrap ftco-animate">
+						<span class="date">2023-2024</span>
+						<h2>Laboratory Assistant Computer Graphic</h2>
+						<span class="position">State Islamic University of Malang</span>
+						<p class="mt-4">"Member of GDSC UIN Malang" is a student involved in the Google Developer
+							Student Clubs at UIN Malang. They participate in club activities, forge partnerships, and
+							contribute to skill development and tech community growth on campus and beyond.</p>
+						<div class="row justify-content-center mt-3">
+							<div class="col-md-6 text-center ftco-animate">
+								<p><a href="https://drive.google.com/file/d/11w97VHjIEIJH6y2c2icELByD3iZ4AAvE/view?usp=sharing"
+										class="btn btn-primary py-3 px-4">Certificate</a></p>
+							</div>
+						</div>
+					</div>
+					<!-- <div class="resume-wrap ftco-animate">
+    					<span class="date">2014-2015</span>
+    					<h2>Wordpress Developer</h2>
+    					<span class="position">Cambridge University</span>
+    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    				</div>
+    				<div class="resume-wrap ftco-animate">
+    					<span class="date">2017-2018</span>
+    					<h2>UI/UX Designer</h2>
+    					<span class="position">Cambridge University</span>
+    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    				</div> -->
+				</div>
+
 			</div>
 		</div>
 	</section>
@@ -581,12 +634,15 @@
 							seriously. You met the right person to entrust your work to.</p>
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
 							<li class="ftco-animate"><a
-									href="https://www.linkedin.com/in/charles-iqbal-rizanta-ab0814327/"></span></a></li>
+									href="https://www.linkedin.com/in/charles-iqbal-rizanta-ab0814327/"><span
+										class="icon-linkedin"></span></a></li>
 							<li class="ftco-animate"><a href="https://api.whatsapp.com/send?phone=6282139077587"><span
 										class="icon-whatsapp"></span></a></li>
 							<li class="ftco-animate"><a
-									href="https://www.instagram.com/charlesiqball/"></span></a></li>
-							<li class="ftco-animate"><a href="https://github.com/charlesiqbalr"></span></a></li>
+									href="https://www.instagram.com/charlesiqball/"><span
+										class="icon-instagram"></span></a></li>
+							<li class="ftco-animate"><a href="https://github.com/charlesiqbalr"><span
+										class="icon-github"></span></a></li>
 						</ul>
 					</div>
 				</div>
