--- a/index.html
+++ b/index.html
@@ -49,56 +49,88 @@
 		</div>
 	</nav>
 	<section id="home-section" class="hero">
-		<div class="home-slider owl-carousel">
-			<div class="slider-item">
-				<div class="container">
-					<div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end"
-						data-scrollax-parent="true">
-						<div class="one-third js-fullheight order-md-last img"
-							style="background-image:url(images/charles2.png);">
+    <div class="home-slider owl-carousel">
+        <div class="slider-item">
+            <div class="container">
+                <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end"
+                    data-scrollax-parent="true">
+                    <div class="one-third js-fullheight order-md-last img"
+                        style="background-image:url(images/charles2.png); background-size: cover; background-position: center;">
+                    </div>
+                    <div class="one-forth d-flex align-items-center ftco-animate"
+                        data-scrollax=" properties: { translateY: '70%' }">
+                        <div class="text">
+                            <span class="subheading">Hello!</span>
+                            <h1 class="mb-4 mt-3">I'm <span>Charles Iqbal Rizanta</span></h1>
+                            <h2 class="mb-4">A Freelance Web Developer</h2>
+                            <p>
+                                <a href="https://api.whatsapp.com/send?phone=6282139077587"
+                                    class="btn btn-primary py-3 px-4">Hire me</a>
+                                <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My
+                                    works</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-						</div>
-						<div class="one-forth d-flex align-items-center ftco-animate"
-							data-scrollax=" properties: { translateY: '70%' }">
-							<div class="text">
-								<span class="subheading">Hello!</span>
-								<h1 class="mb-4 mt-3">I'm <span>Charles Iqbal Rizanta</span></h1>
-								<h2 class="mb-4">A Freelance Web Developer</h2>
-								<p><a href="https://api.whatsapp.com/send?phone=6282139077587"
-										class="btn btn-primary py-3 px-4">Hire me</a>
-									<a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My
-										works</a>
-								</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+        <div class="slider-item">
+            <div class="container">
+                <div class="row d-flex no-gutters slider-text align-items-end justify-content-end"
+                    data-scrollax-parent="true">
+                    <div class="one-third js-fullheight order-md-last img"
+                        style="background-image:url(images/charles.png); background-size: cover; background-position: center;">
+                    </div>
+                    <div class="one-forth d-flex align-items-center ftco-animate"
+                        data-scrollax=" properties: { translateY: '70%' }">
+                        <div class="text">
+                            <span class="subheading">Hello!</span>
+                            <h1 class="mb-4 mt-3">I'm a <span>web developer</span> based in Indonesia</h1>
+                            <p>
+                                <a href="https://api.whatsapp.com/send?phone=6282139077587"
+                                    class="btn btn-primary py-3 px-4">Hire me</a>
+                                <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My works</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
-			<div class="slider-item">
-				<div class="container">
-					<div class="row d-flex no-gutters slider-text align-items-end justify-content-end"
-						data-scrollax-parent="true">
-						<div class="one-third js-fullheight order-md-last img"
-							style="background-image:url(images/charles.png);">
+<style>
+/* Responsif untuk perangkat seluler */
+.hero {
+    overflow: hidden;
+}
 
-						</div>
-						<div class="one-forth d-flex align-items-center ftco-animate"
-							data-scrollax=" properties: { translateY: '70%' }">
-							<div class="text">
-								<span class="subheading">Hello!</span>
-								<h1 class="mb-4 mt-3">I'm a <span>web developer</span> based in Indonesia</h1>
-								<p><a href="https://api.whatsapp.com/send?phone=6282139077587"
-										class="btn btn-primary py-3 px-4">Hire me</a> <a href="#projects-section"
-										class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+.js-fullheight {
+    height: 100vh;
+    max-height: 100%;
+}
 
+.img {
+    background-size: cover;
+    background-position: center;
+    height: 100%;
+}
+
+@media (max-width: 768px) {
+    .slider-item .text {
+        text-align: center;
+    }
+
+    .slider-item .one-third {
+        height: 50vh;
+    }
+
+    .btn {
+        margin: 5px;
+    }
+}
+</style>
 
 	<section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
 		<div class="container">
