--- a/index.html
+++ b/index.html
@@ -48,86 +48,32 @@
 			</div>
 		</div>
 	</nav>
+	
 	<section id="home-section" class="hero">
-    <div class="slider-item">
-        <div class="container">
-            <div class="row d-flex no-gutters slider-text align-items-center justify-content-between">
-                <div class="col-md-6 img-wrapper">
-                    <div class="img"
+        <div class="slider-item">
+            <div class="container">
+                <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end"
+                    data-scrollax-parent="true">
+                    <div class="one-third js-fullheight order-md-last img"
                         style="background-image:url(images/charles2.png); background-size: cover; background-position: center;">
                     </div>
-                </div>
-                <div class="col-md-6 text-wrapper">
-                    <div class="text">
-                        <span class="subheading">Hello!</span>
-                        <h1 class="mb-4 mt-3">I'm <span>Charles Iqbal Rizanta</span></h1>
-                        <h2 class="mb-4">A Freelance Web Developer</h2>
-                        <p>
-                            <a href="https://api.whatsapp.com/send?phone=6282139077587"
-                                class="btn btn-primary py-3 px-4">Hire me</a>
-                            <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My works</a>
-                        </p>
+                    <div>
+                        <div class="text">
+                            <span class="subheading">Hello!</span>
+                            <h1 class="mb-4 mt-3">I'm <span>Charles Iqbal Rizanta</span></h1>
+                            <h2 class="mb-4">A Freelance Web Developer</h2>
+                            <p>
+                                <a href="https://api.whatsapp.com/send?phone=6282458842190"
+                                    class="btn btn-primary py-3 px-4">Hire me</a>
+                                <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My
+                                    works</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
         </div>
     </div>
 </section>
-
-<style>
-/* Basic Styling */
-.hero {
-    overflow-x: hidden;
-    overflow-y: auto;
-    position: relative;
-    padding: 50px 0;
-}
-
-.slider-item {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.img-wrapper {
-    width: 100%;
-    max-height: 400px;
-    overflow: hidden;
-}
-
-.img {
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-position: center;
-}
-
-.text-wrapper {
-    text-align: center;
-    padding: 20px;
-}
-
-.text .btn {
-    margin: 5px;
-}
-
-/* Responsive Adjustments */
-@media (max-width: 768px) {
-    .slider-item {
-        flex-wrap: wrap;
-    }
-
-    .img-wrapper {
-        max-height: 250px;
-    }
-
-    .text-wrapper {
-        text-align: center;
-        margin-top: 20px;
-    }
-}
-</style>
-
 
 	<section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
 		<div class="container">
