--- a/index.html
+++ b/index.html
@@ -49,7 +49,29 @@
 		</div>
 	</nav>
 	
-	<section id="home-section" class="hero"> <div class="home-slider owl-carousel"> <div class="slider-item"> <div class="container"> <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true"> <div class="one-third js-fullheight order-md-last img" style="background-image:url(images/charles2.png);"> </div> <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }"> <div class="text"> <span class="subheading">Halo!</span> <h1 class="mb-4 mt-3">Saya <span>Charles Iqbal Rizanta</span></h1> <h2 class="mb-4">Pengembang Web Lepas</h2> <p><a href="https://api.whatsapp.com/send?phone=6282139077587" class="btn btn-primary py-3 px-4">Pekerjakan saya</a> <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">Karya saya</a> </p> </div> </div> </div> </div> </div> <div class="slider-item"> <div class="container"> <div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true"> <div class="one-third js-fullheight order-md-last img" style="background-image:url(images/charles.png);"> </div> <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }"> <div class="text"> <span class="subheading">Halo!</span> <h1 class="mb-4 mt-3">Saya seorang <span>pengembang web</span> yang tinggal di Indonesia</h1> <p><a href="https://api.whatsapp.com/send?phone=6282139077587" class="btn btn-primary py-3 px-4">Pekerjakan saya</a> <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">Pekerjaan saya</a></p> </div> </div> </div> </div> </div> </div> </section>
+	<section id="home-section" class="hero">
+  <div class="owl-carousel">
+    <div>
+      <div class="container">
+        <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
+          <div class="one-third js-fullheight order-md-last img" style="background-image:url(images/charles2.png);">
+          </div>
+          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax="properties: { translateY: '70%' }">
+            <div class="text">
+              <span class="subheading">Halo!</span>
+              <h1 class="mb-4 mt-3">Saya <span>Charles Iqbal Rizanta</span></h1>
+              <h2 class="mb-4">Pengembang Web Lepas</h2>
+              <p>
+                <a href="https://api.whatsapp.com/send?phone=6282139077587" class="btn btn-primary py-3 px-4">Pekerjakan saya</a>
+                <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">Karya saya</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+	</section>
 
 
 	<section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
