--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       <!-- Elemen teks di kiri -->
       <div class="col-md-6 order-2 order-md-1 text-center text-md-start">
         <div class="text">
-          <span class="subheading">Halo!</span>
-          <h1 class="mb-4 mt-3">Saya <span>Charles Iqbal Rizanta</span></h1>
-          <h2 class="mb-4">Pengembang Web Lepas</h2>
+          <span class="subheading" style="font-weight: 400; font-family: 'Montserrat', sans-serif;">Halo!</span>
+          <h1 class="mb-4 mt-3" style="font-weight: 700; font-family: 'Montserrat', sans-serif;">Saya <span style="color: orange;">Charles Iqbal Rizanta</span></h1>
+          <h2 class="mb-4" style="font-weight: 500; font-family: 'Montserrat', sans-serif;">Pengembang Web Lepas</h2>
           <p>
             <a href="https://api.whatsapp.com/send?phone=6282139077587" class="btn btn-primary py-3 px-4">Pekerjakan saya</a>
             <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">Karya saya</a>
@@ -74,13 +74,40 @@
   </div>
 
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+
+    .hero {
+      font-family: 'Montserrat', sans-serif;
+      position: relative;
+      z-index: 1;
+      padding-bottom: 50px; /* Tambahkan padding bawah untuk menghindari overlap */
+    }
+
+    .img {
+      height: 100%;
+      width: 100%;
+      background-position: center;
+      background-size: cover;
+      min-height: 300px; /* Tetapkan tinggi minimum untuk perangkat kecil */
+    }
+
     @media (max-width: 768px) {
       .img {
-        height: 300px; /* Atur ulang tinggi gambar untuk perangkat kecil */
+        height: auto; /* Sesuaikan tinggi gambar pada perangkat kecil */
+        aspect-ratio: unset;
       }
+
+      .hero {
+        padding-bottom: 100px; /* Tambahkan lebih banyak padding bawah pada perangkat kecil */
+      }
+    }
+
+    h1 span {
+      color: orange;
     }
   </style>
 </section>
+
 
 
 
@@ -125,29 +152,6 @@
 				</div>
 			</div>
 		</div>
-	</section><section id="home-section" class="hero">
-  <div class="slider-item">
-    <div class="container">
-      <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-        <div class="one-third js-fullheight order-md-last img" style="background-image:url(images/charles2.png);">
-        </div>
-        <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax="properties: { translateY: '70%' }">
-          <div class="text">
-            <span class="subheading">Halo!</span>
-            <h1 class="mb-4 mt-3">Saya <span>Charles Iqbal Rizanta</span></h1>
-            <h2 class="mb-4">Pengembang Web Lepas</h2>
-            <p>
-              <a href="https://api.whatsapp.com/send?phone=6282139077587" class="btn btn-primary py-3 px-4">Pekerjakan saya</a>
-              <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">Karya saya</a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-
 	<section class="ftco-section ftco-no-pb" id="resume-section">
 		<div class="container">
 			<div class="row justify-content-center pb-5">
