--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
       position: relative;
       z-index: 1;
       padding-bottom: 50px; /* Tambahkan padding bawah untuk menghindari overlap */
+      padding-top: 80px; /* Tambahkan jarak untuk menghindari overlap dengan menu navigasi */
     }
 
     .img {
@@ -108,50 +109,64 @@
   </style>
 </section>
 
+<section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
+  <div class="container">
+    <div class="row d-flex align-items-center">
+      <!-- Gambar -->
+      <div class="col-md-6 col-lg-5 d-flex">
+        <div class="img-about img d-flex align-items-stretch" style="position: relative;">
+          <div class="overlay" style="position: absolute; inset: 0; background: rgba(0,0,0,0.2);"></div>
+          <div class="img d-flex align-self-stretch align-items-center" style="background-image: url('images/charles2.png'); background-size: cover; background-position: center; aspect-ratio: 3/4; width: 100%; border-radius: 10px;">
+          </div>
+        </div>
+      </div>
 
+      <!-- Teks -->
+      <div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
+        <div class="row justify-content-start pb-3">
+          <div class="col-md-12 heading-section ftco-animate">
+            <h1 class="big">About</h1>
+            <h2 class="mb-4">About Me</h2>
+            <p>Know a little about me</p>
+            <ul class="about-info mt-4 px-md-0 px-2">
+              <li class="d-flex"><span>Name:</span> <span style="color: orange;">Charles Iqbal Rizanta</span></li>
+              <li class="d-flex"><span>Address:</span> <span>Malang, Jawa Timur, Indonesia</span></li>
+              <li class="d-flex"><span>Zip code:</span> <span>65119</span></li>
+              <li class="d-flex"><span>Email:</span> <span>charlesiqbalr@gmail.com</span></li>
+              <li class="d-flex"><span>Phone:</span> <span>082139077587</span></li>
+            </ul>
+          </div>
+        </div>
+        <div class="counter-wrap ftco-animate d-flex mt-md-3">
+          <div class="text">
+            <p class="mb-4">
+              <span class="number" data-number="120" style="font-weight: 700; font-size: 2rem;">120</span>
+              <span style="font-family: 'Montserrat', sans-serif;">Project complete</span>
+            </p>
+            <p><a href="https://drive.google.com/file/d/1M0vx4ipqs_2JVPcRfjrotGKrdrq9AqTn/view?usp=sharing" class="btn btn-primary py-3 px-3">Download CV</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
+  <style>
+    .ftco-about .img-about {
+      margin-bottom: 30px;
+    }
 
+    @media (max-width: 768px) {
+      .ftco-about .img-about {
+        margin-bottom: 20px;
+      }
 
-	<section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
-		<div class="container">
-			<div class="row d-flex">
-				<div class="col-md-6 col-lg-5 d-flex">
-					<div class="img-about img d-flex align-items-stretch">
-						<div class="overlay"></div>
-						<div class="img d-flex align-self-stretch align-items-center"
-							style="background-image:url(images/charles2.png);">
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
-					<div class="row justify-content-start pb-3">
-						<div class="col-md-12 heading-section ftco-animate">
-							<h1 class="big">About</h1>
-							<h2 class="mb-4">About Me</h2>
-							<p>Know a little about me</p>
-							<ul class="about-info mt-4 px-md-0 px-2">
-								<li class="d-flex"><span>Name:</span> <span>Charles Iqbal Rizanta</span></li>
-								<!-- <li class="d-flex"><span>Date of birth:</span> <span>October 12, 2003</span></li> -->
-								<li class="d-flex"><span>Address:</span> <span>Malang, Jawa Timur, Indonesia</span></li>
-								<li class="d-flex"><span>Zip code:</span> <span>65119</span></li>
-								<li class="d-flex"><span>Email:</span> <span>charlesiqbalr@gmail.com</span></li>
-								<li class="d-flex"><span>Phone: </span> <span>082139077587</span></li>
-							</ul>
-						</div>
-					</div>
-					<div class="counter-wrap ftco-animate d-flex mt-md-3">
-						<div class="text">
-							<p class="mb-4">
-								<span class="number" data-number="120">0</span>
-								<span>Project complete</span>
-							</p>
-							<p><a href="https://drive.google.com/file/d/1M0vx4ipqs_2JVPcRfjrotGKrdrq9AqTn/view?usp=sharing"
-									class="btn btn-primary py-3 px-3">Download CV</a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+      .about-info {
+        font-size: 0.9rem;
+      }
+    }
+  </style>
+</section>
+
 	<section class="ftco-section ftco-no-pb" id="resume-section">
 		<div class="container">
 			<div class="row justify-content-center pb-5">
