--- a/index.html
+++ b/index.html
@@ -109,39 +109,40 @@
   </style>
 </section>
 
-<section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
+<section id="about-section" class="ftco-section">
   <div class="container">
-    <div class="row d-flex align-items-center">
+    <div class="row align-items-center">
       <!-- Gambar -->
-      <div class="col-md-6 col-lg-5 d-flex">
+      <div class="col-md-6">
         <div class="img-about img d-flex align-items-stretch" style="position: relative;">
           <div class="overlay" style="position: absolute; inset: 0; background: rgba(0,0,0,0.2);"></div>
-          <div class="img d-flex align-self-stretch align-items-center" style="background-image: url('images/charles.png'); background-size: cover; background-position: center; aspect-ratio: 3/4; width: 100%; border-radius: 10px;">
+          <div class="img d-flex align-self-stretch align-items-center" 
+               style="background-image: url('images/charles2.png'); background-size: cover; background-position: center; aspect-ratio: 3/4; width: 100%; border-radius: 10px;">
           </div>
         </div>
       </div>
 
       <!-- Teks -->
-      <div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
+      <div class="col-md-6">
         <div class="row justify-content-start pb-3">
-          <div class="col-md-12 heading-section ftco-animate">
+          <div class="col-md-12 heading-section">
             <h1 class="big">About</h1>
             <h2 class="mb-4">About Me</h2>
             <p>Know a little about me</p>
-            <ul class="about-info mt-4 px-md-0 px-2">
+            <ul class="about-info mt-4">
               <li class="d-flex"><span>Name:</span> <span style="color: orange;">Charles Iqbal Rizanta</span></li>
               <li class="d-flex"><span>Address:</span> <span>Malang, Jawa Timur, Indonesia</span></li>
               <li class="d-flex"><span>Zip code:</span> <span>65119</span></li>
               <li class="d-flex"><span>Email:</span> <span>charlesiqbalr@gmail.com</span></li>
-              <li class="d-flex"><span>Phone:</span> <span>082245842190</span></li>
+              <li class="d-flex"><span>Phone:</span> <span>082139077587</span></li>
             </ul>
           </div>
         </div>
-        <div class="counter-wrap ftco-animate d-flex mt-md-3">
+        <div class="counter-wrap d-flex mt-md-3">
           <div class="text">
             <p class="mb-4">
               <span class="number" data-number="120" style="font-weight: 700; font-size: 2rem;">120</span>
-              <span style="font-family: 'Montserrat', sans-serif;">Project complete</span>
+              <span>Project complete</span>
             </p>
             <p><a href="https://drive.google.com/file/d/1M0vx4ipqs_2JVPcRfjrotGKrdrq9AqTn/view?usp=sharing" class="btn btn-primary py-3 px-3">Download CV</a></p>
           </div>
@@ -151,13 +152,19 @@
   </div>
 
   <style>
-    .ftco-about .img-about {
+    #about-section {
+      position: relative;
+      padding-top: 120px; /* Atur jarak atas */
+      padding-bottom: 50px; /* Atur jarak bawah */
+    }
+
+    .img-about {
       margin-bottom: 30px;
     }
 
     @media (max-width: 768px) {
-      .ftco-about .img-about {
-        margin-bottom: 20px;
+      #about-section {
+        padding-top: 150px; /* Tambahkan lebih banyak jarak atas pada layar kecil */
       }
 
       .about-info {
@@ -166,6 +173,7 @@
     }
   </style>
 </section>
+
 
 	<section class="ftco-section ftco-no-pb" id="resume-section">
 		<div class="container">
