--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="img-about img d-flex align-items-stretch" style="position: relative;">
           <div class="overlay" style="position: absolute; inset: 0; background: rgba(0,0,0,0.2);"></div>
           <div class="img d-flex align-self-stretch align-items-center" 
-               style="background-image: url('images/charles2.png'); background-size: cover; background-position: center; aspect-ratio: 3/4; width: 100%; border-radius: 10px;">
+               style="background-image: url('images/charles.png'); background-size: cover; background-position: center; aspect-ratio: 3/4; width: 100%; border-radius: 10px;">
           </div>
         </div>
       </div>
@@ -137,7 +137,7 @@
         <div class="counter-wrap d-flex mt-md-3">
           <div class="text">
             <p class="mb-4">
-              <span class="number" data-number="120" style="font-weight: 700; font-size: 2rem;">45</span>
+              <span class="number" data-number="120" style="font-weight: 700; font-size: 2rem;">35</span>
               <span>Project complete</span>
             </p>
             <p><a href="https://drive.google.com/file/d/1M0vx4ipqs_2JVPcRfjrotGKrdrq9AqTn/view?usp=sharing" class="btn btn-primary py-3 px-3">Download CV</a></p>
